--- a/SummerSchoolPaper/school.tex
+++ b/SummerSchoolPaper/school.tex
@@ -14,8 +14,8 @@ reproducing an experiment using virtual machines.
 
 Kenji Takeda from Microsoft Research delved further into the use of
 virtualisation, by describing the impact of cloud computing on
-computational research\footnote{e.g., the various projects at
-\url{http://azure4research.com/}}. As more and more research projects
+computational research.\footnote{e.g., the various projects at
+\url{http://azure4research.com/}} As more and more research projects
 involve the use of virtual machines running on cloud infrastructure,
 it might perhaps be possible to leverage this for creating
 reproducible experiments by sharing these virtual machines. After that,
