--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -2,9 +2,9 @@
 \label{s:intro}
 
 This paper has been written during the week of the Summer School
-on Experimental Methodology in Computational Science Research
+on Experimental Methodology in Computational Science Research.
 \footnote{St Andrews, Scotland, August 4-8, 2014,
-\url{https://blogs.cs.st-andrews.ac.uk/emcsr2014/}}. The 
+\url{https://blogs.cs.st-andrews.ac.uk/emcsr2014/}} The 
 school was comprising of lectures, tutorials and a hackathon,
 all united by the topic of reproducible research in computational
 sciences. 
