--- a/SummerSchoolPaper/group3.tex
+++ b/SummerSchoolPaper/group3.tex
@@ -20,7 +20,7 @@ We also noted a lack of domain-specific workflows for recomputation in non-CS jo
 A counterexample is the Geoscientific Model Development (GMD) journal, which encourages reviewers to get
   acquainted with the code behind papers under review \cite{GMD_editorial_2013}.
 Yet, the same journal, as of now, imposes a 50~MB limit on the size of electronic supplements 
-  what effectively rules out shipping a VM together with the paper.
+  which effectively rules out shipping a VM together with the paper.
 
 The level of computer proficiency in non-CS domains\footnote{For example, see: ``\emph{Computational science: ...Error. Why scientific programming does not compute}''. DOI:10.1038/467775a.} is also likely to influence the ability of researchers to use the Virtual Machines --- it is arguably less likely that a physics or urban-planning journal reviewer will be comfortable using a VM, in contrast to CS-related journals.
 
