--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -1,7 +1,7 @@
 \section{Introduction}
 \label{s:intro}
 
-This paper has been written during the week of the Summer School
+This paper was written during the week of the Summer School
 on Experimental Methodology in Computational Science Research.
 \footnote{St Andrews, Scotland, August 4-8, 2014,
 \url{https://blogs.cs.st-andrews.ac.uk/emcsr2014/}} The 
