Remove an hline
If you'd rather have the line present, can it at least have a bit of
extra vertical space below it?

--- a/SummerSchoolPaper/bus_table.tex
+++ b/SummerSchoolPaper/bus_table.tex
@@ -11,7 +11,7 @@
 \begin{table}[htbp]
 \centering
 \begin{tabular}{| c c c c c  |} \hline 
- \hpicl{5} & \hpic{6} & \hpic{7} & \hpic{8} & \hpicr{9} \\ \hline
+ \hpicl{5} & \hpic{6} & \hpic{7} & \hpic{8} & \hpicr{9} \\
  \vtwo{0}{0}&\vtwo{2.875\exr{-4}}{4.253\exr{-4}}&\vtwo{0.434}{0.485}&\vtwo{0.513}{0.566}&\vtwo{0.0}{0.0}\\[10pt]
 \hline
 \end{tabular}
