--- a/SummerSchoolPaper/group4.tex
+++ b/SummerSchoolPaper/group4.tex
@@ -100,7 +100,7 @@ subjects data, they will usually need to seek ethical approval from
 their own institution. In our recent work, a survey of 505 papers
 using online social network (OSN) data found that only 2\% of papers
 disclose any of the ethical considerations of their
-work~\cite{hutton:reproducible}.
+work~\cite{hutton:reproducibility}.
 
 % cite osn survey!
 
