--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -204,11 +204,11 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
   year	      =	{2014}
 }
 
-@Misc{hutton:reproducible,
+@Misc{hutton:reproducibility,
     author = {Luke Hutton and Tristan Henderson},
     title = {Towards reproducibility in online social network 
         research},
-    note = {In submission},
+    note = {In submission to this same special issue},
     month = aug,
     year = 2014,
 }
