typos and movement

--- a/SummerSchoolPaper/open.tex
+++ b/SummerSchoolPaper/open.tex
@@ -1,6 +1,7 @@
 \section{Open, Reproducible, Executable}
 
-This paper is intended to be Open, Reproducible, and Executable.  We discuss here what we mean by these words, how we tried to achieve them, and to what extent we achieved this.
+This paper is intended to be \emph{open}, 
+\emph{reproducible}, and \emph{executable}.  We discuss here what we mean by these words, how we tried to achieve them, and to what extent we achieved this.
 
 By ``Open'', we mean that the paper was openly developed and written.  The authors collaborated via GitHub.\footnote{specifically
 \texttt{\url{https://github.com/larskotthoff/recomputation-ss-paper/}}}   Although authors were usually in the same room, with so many of us other forms of collaboration would have been very 
