--- a/SummerSchoolPaper/open.tex
+++ b/SummerSchoolPaper/open.tex
@@ -25,4 +25,8 @@ computations involved in constructing the data must be run by hand.   In terms o
 
 
 
+\textbf{Notes about Sweave (citation needed), about how all tables and fig in paper are from Sweave (true?).  
+VM in depot and recomp to allow paper to be rebuilt.
+VMs available where possible}
+
 
