start fleshing out the background

--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -255,3 +255,65 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
   volume      =	{334},
   year	      =	{2011}
 }
+
+@Article{bonnet:repeatability,
+  author      =	{Bonnet, Philippe and Manegold, Stefan and Bj{\o}rling, Matias and Cao, Wei and Gonzalez, Javier and Granados, Joel and Hall, Nancy and Idreos, Stratos and Ivanova, Milena and Johnson, Ryan and Koop, David and Kraska, Tim and M\"{u}ller, Ren\'{e} and Olteanu, Dan and Papotti, Paolo and Reilly, Christine and Tsirogiannis, Dimitris and Yu, Cong and Freire, Juliana and Shasha, Dennis},
+  title	      =	{Repeatability and Workability Evaluation of {SIGMOD} 2011},
+  abstract    =	{SIGMOD has offered, since 2008, to verify the experiments published in the papers accepted at the conference. This year, we have been in charge of reproducing the experiments provided by the authors (repeatability), and exploring changes to experiment parameters (workability). In this paper, we assess the SIGMOD repeatability process in terms of participation, review process and results. While the participation is stable in terms of number of submissions, we find this year a sharp contrast between the high participation from Asian authors and the low participation from American authors. We also find that most experiments are distributed as Linux packages accompanied by instructions on how to setup and run the experiments. We are still far from the vision of executable papers.},
+  address     =	{New York, NY, USA},
+  doi	      =	{10.1145/2034863.2034873},
+  issn	      =	{0163-5808},
+  journal     =	{SIGMOD Rec.},
+  keywords    =	{reproducibility},
+  month	      =	sep,
+  number      =	{2},
+  pages	      =	{45--48},
+  publisher   =	{ACM},
+  url	      =	{http://dx.doi.org/10.1145/2034863.2034873},
+  volume      =	{40},
+  year	      =	{2011}
+}
+
+@Article{ioannidis:repeatability,
+  author      =	{Ioannidis, John P. A. and Allison, David B. and Ball, Catherine A. and Coulibaly, Issa and Cui, Xiangqin and Culhane, Aedin C. and Falchi, Mario and Furlanello, Cesare and Game, Laurence and Jurman, Giuseppe and Mangion, Jon and Mehta, Tapan and Nitzberg, Michael and Page, Grier P. and Petretto, Enrico and van Noort, Vera},
+  title	      =	{Repeatability of published microarray gene expression analyses},
+  abstract    =	{Given the complexity of microarray-based gene expression studies, guidelines encourage transparent design and public data availability. Several journals require public data deposition and several public databases exist. However, not all data are publicly available, and even when available, it is unknown whether the published results are reproducible by independent scientists. Here we evaluated the replication of data analyses in 18 articles on microarray-based gene expression profiling published in Nature Genetics in 2005a2006. One table or figure from each article was independently evaluated by two teams of analysts. We reproduced two analyses in principle and six partially or with some discrepancies; ten could not be reproduced. The main reason for failure to reproduce was data unavailability, and discrepancies were mostly due to incomplete data annotation or specification of data processing and analysis. Repeatability of published microarray studies is apparently
+		limited. More strict publication rules enforcing public data availability and explicit description of data processing and analysis should be considered.},
+  day	      =	{28},
+  doi	      =	{10.1038/ng.295},
+  issn	      =	{1061-4036},
+  journal     =	{Nat Genet},
+  keywords    =	{microarray, reproducibility},
+  month	      =	feb,
+  number      =	{2},
+  pages	      =	{149--155},
+  pmid	      =	{19174838},
+  publisher   =	{Nature Publishing Group},
+  url	      =	{http://dx.doi.org/10.1038/ng.295},
+  volume      =	{41},
+  year	      =	{2009}
+}
+
+
+@Article{howe:reproducible,
+  author      =	{Howe, Bill},
+  title	      =	{Virtual Appliances, Cloud Computing, and Reproducible Research},
+  abstract    =	{As science becomes increasingly computational, reproducibility has become increasingly difficult, perhaps surprisingly. In many contexts, virtualization and cloud computing can mitigate the issues involved without significant overhead to the researcher, enabling the next generation of rigorous and reproducible computational science.},
+  doi	      =	{10.1109/mcse.2012.62},
+  issn	      =	{1521-9615},
+  journal     =	{Computing in Science \& Engineering},
+  keywords    =	{cloud-computing, reproducibility, research},
+  month	      =	jul,
+  number      =	{4},
+  pages	      =	{36--41},
+  url	      =	{http://dx.doi.org/10.1109/mcse.2012.62},
+  volume      =	{14},
+  year	      =	{2012}
+}
+
+
+
+
+
+
+
