--- a/SummerSchoolPaper/recomputation.tex
+++ b/SummerSchoolPaper/recomputation.tex
@@ -1,6 +1,45 @@
 \section{The state of the art}
 \label{s:recomputation}
 
+Reproducibility in computational science has been of interest for
+several years now, with some considering the nature of computational
+science to make the issues distinct from other
+sciences~\cite{donoho:reproducible}. While reproducibility is
+acknowledged as a fundamental part of the scientific method, various
+studies have shown that many, if not most, research papers are not
+reproducible~\cite{bonnet:repeatability,hornbaek:replications,ioannidis:repeatability}.
+
+Terminology is important, but unfortunately many terms are used
+interchangeably in this area.  Peng~\cite{peng:reproducible} describes
+a spectrum of reproducibility from a paper that is not reproducible,
+to one that allows ``full replication''. But
+Drummond~\cite{drummond:replicability} distinguishes between
+replicability and reproducibility by saying that the former is the
+exact repeating of an experiment as presented, whereas reproducibility
+is broader and allows one to build on an experiment and further
+science. Gent introduces another term, ``recomputation'', to describe
+the replication of computational experiments~\cite{gent:recomputation}.
+In this paper we consider challenges and ways in which we can enable
+the widespread recomputation of experiments as described in the
+Recomputation Manifesto.
+
+There are many aspects to recomputation, all of which are being
+actively studied. Stodden and Miguez propose a set of best practices,
+including licensing and sharing of data, workflow tracking, making
+code and method available, and citing data and
+software~\cite{stodden:practices}. Davison describes how to make it
+easier to capture workflow and experimental context, including using a
+``consistent, repeatable computing environment'' (the
+recomputation.org project and others~\cite{howe:reproducible} aim to
+make this particular aspect easier through the use of virtual
+machines), version control and clearly separated experimental
+parameters~\cite{davison:reproducibility}. Our paper attempts to
+follow these best practices, having used version control and is
+available to recomputate on a VM.  Mesirov describes one particular
+workflow to make it easy to track and package genomic
+data~\cite{mesirov:accessible}.
+
+OLD TEXT follows:
 In this section we are going to describe the current state of reproducible computational science, and
 in particular the Recomputation.org project, which is aimed at implementing
 the infrastructure for recomputable experiments following the statements of the Recomputation
@@ -13,3 +52,4 @@ Ian Gent at one of the group discussions at the Collaborations Workshop 2014).
 
 \emph{This section is in a preliminary state}
 
+\cite{johnson:evidence}
