--- a/SummerSchoolPaper/intro.tex
+++ b/SummerSchoolPaper/intro.tex
@@ -1,31 +1,45 @@
 \section{Introduction}
 \label{s:intro}
 
-This paper was written during the week of the Summer School
-on Experimental Methodology in Computational Science Research.
+
+We consider reproducibility in the computational sciences.  We interpret Computational Sciences as including Computer Science, but also 
+work in any other science in which computational work plays an important role.
+Reproducibility is a cornerstone of the scientific method, and should therefore be a cornerstone of Computational Sciences.  
+To what extent is this true?  What challenges arise in reproducing work in computational sciences?  
+
+To study these questions, we performed four case studies on different questions facing reproducibility in computational sciences.  
+Each case study takes on a different aspect of reproducibility, identifies any problems met, and discusses the issues that they have raised.
+Additionally, we consider the meta-level question of how reproducible this paper itself is.  We have striven to make this paper open, 
+reproducible, and executable, but even while trying to do this we have not been completely successful.
+
+We identified four questions which we investigated through four case studies.  
+These questions were as follows. 
+How is reproducibility affected by differing ethics requirements at different universities? 
+Are parallel and distributed computational experiments more or less reproducible than serial ones?
+How reproducible are computational scientific experiments from disciplines other than computer science?
+How reproducible is the data analysis is a published experiment in human-computer interaction, where 
+the author made significant efforts to make it reproducible?
+
+Most work for this paper was performed 
+during the Summer School
+on Experimental Methodology in Computational Science Research.   Indeed, a highly provisional first draft of this paper was completed by the end of the Summer School, with ensuing weeks used in completing work and writing.  
 \footnote{St Andrews, Scotland, August 4-8, 2014,
-\url{https://blogs.cs.st-andrews.ac.uk/emcsr2014/}} The 
-school was comprising of lectures, tutorials and a hackathon,
-all united by the topic of reproducible research in computational
-sciences. 
-
-One goal of the Summer School was to write a paper about reproducible research in
-Computational Sciences \emph{by the end of the week}, and this is what you are reading now.
-The hackathon aspect of the Summer School therefore became focussed on working on this paper
-and then writing it. 
-
-For the hackathon (actually split into several sessions), attendees 
-were asked to `bring a paper', i.e. to bring the suggestion of a 
-computational experiment to be reproduced as part of the summer school. 
-The experiment should be either from a published paper or, if unpublished, 
-have the agreement of all authors concerned for this activity including 
-the publication of a replication.  
-
-Following participants' presentations of their 
-selected papers, we decided that they fell naturally into three topics, 
-and three groups were performed to work on these topics as case studies.
+\url{https://blogs.cs.st-andrews.ac.uk/emcsr2014/}} 
+The first three case studies were selected by discussing the interests of participants, and forming groups and research questions around these. 
+Therefore, these case studies were performed by subsets of the authors. 
 The resulting case studies will be presented below
 in Sections~\ref{s:group1}~--~\ref{s:group3}.
+The final case study was led by a lecturer of the summer school, and was performed by all participants
+and is presented in Section~\ref{s:group4}.
+
+The nature of this paper means that none of our case studies can give exhaustive answers, but we suggest that each raises interesting questions
+for future consideration by researchers wishing to reproduce computational experiments.
+
+The paper itself was written to be open, reproducible, and executable.  The entire edit history, including paper and many aspects of the case studies, is available openly on github and indeed was open from the start of writing the paper.  The paper has executable aspects through integration of R and \LaTeX\ via the R package Sweave \cite{sweave}, so that as raw data changes, new tables and figures can be regenerated automatically.
+Finally, we have endeavoured to make it reproducible through measures such as providing virtual machines for aspects of our work, not least a virtual machine in which the paper itself can be rebuilt.
+
+
+
 
 
 
