flesh out the background

--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -311,9 +311,49 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
   year	      =	{2012}
 }
 
+@Misc{pineda-krch:sweave,
+    author = {Pineda-Krch, Mario},
+    title = {The Joy of {Sweave}: A Beginner's Guide to Reproducible
+        Research with {Sweave}},
+    year = 2011,
+    month = jan,
+    day = 17,
+    url =
+    {http://www.mathstat.ualberta.ca/~mlewis/links/the_joy_of_sweave_v1.pdf},
+}
 
+@Article{baker:verify,
+  author      =	{Baker, Monya},
+  title	      =	{Independent labs to verify high-profile papers},
+  day	      =	{14},
+  doi	      =	{10.1038/nature.2012.11176},
+  issn	      =	{1476-4687},
+  journal     =	{Nature},
+  keywords    =	{reproducibility, research, science, nopdf},
+  month	      =	aug,
+  url	      =	{http://dx.doi.org/10.1038/nature.2012.11176},
+  year	      =	{2012}
+}
 
+@Misc{github:citable,
+    author = {GitHub},
+    title = {Making Your Code Citable},
+    url = {https://guides.github.com/activities/citable-code/},
+    year = 2014,
+    month = may,
+    note = {Accessed 28 August 2014},
+}
 
+@Misc{figshare:citable,
+    author = {FigShare},
+    title = {All research outputs should be citable},
+    url =
+    {http://figshare.com/blog/All%20research%20outputs%20should%20be%20citable/32},
+    year = 2012,
+    month = jun,
+    day = 12,
+    note = {Accessed 28 August 2014},
+}
 
 
 
