--- a/SummerSchoolPaper/recomputation.tex
+++ b/SummerSchoolPaper/recomputation.tex
@@ -38,7 +38,8 @@ researchers to share code and data and also cite them through the use
 of DOIs (Digital Object Identifier). Several initiatives have arisen
 to make researchers more aware of tools, and to further the
 development of tools, to make their research more reproducible, e.g.,
-Mozilla Science Labs\footnote{\url{http://mozillascience.org/}},
+Mozilla Science Labs\footnote{\url{http://mozillascience.org/}}, Open
+Science Framework\footnote{\url{https://osf.io/}}, 
 RunMyCode\footnote{\url{http://www.runmycode.org/}} and 
 Software Carpentry\footnote{\url{http://software-carpentry.org/}}. Davison
 describes how to make it easier to capture workflow and experimental
