--- a/SummerSchoolPaper/group4.tex
+++ b/SummerSchoolPaper/group4.tex
@@ -17,7 +17,7 @@ In this spirit of openness and scientific integrity, one of the authors (M.A.N.)
 For this purpose, and in the context of the summer school that this article reflects on, we decided to set up an experiment in which the participants of the summer school (and authors of this article) with the exception of the author of the data, would try to replicate the results of the paper. The main objective of this research is to learn about the challenges and difficulties of a simple recomputation exercise of standard statistical analysis, to provide real examples of experience in recomputation of analysis in HCI, and to enable improvement of the provided data in the future.
 
 \subsection{Experience Report: Recomputing a Memorability Experiment}
-The authors of this article (hence the \emp{reanalysts}), with the exception of M.A.N. were divided into four groups (4,4,5, and 3 persons per group), each of which would try to reproduce a selection of the results of the gesture memorability study reported in reference \cite{Nacenta:memorability}. Approximately half of the reanalysts had a good understanding of HCI or had performed research in the HCI field. To provide sufficient background, the author of the reanalized paper gave a 20 minute presentation on the content of the paper, aimed at a moderately knowledgeable audience. Reanalysts were allowed to ask any number of questions at the end.
+The authors of this article (hence the \emph{reanalysts}), with the exception of M.A.N. were divided into four groups (4,4,5, and 3 persons per group), each of which would try to reproduce a selection of the results of the gesture memorability study reported in reference \cite{Nacenta:memorability}. Approximately half of the reanalysts had a good understanding of HCI or had performed research in the HCI field. To provide sufficient background, the author of the reanalized paper gave a 20 minute presentation on the content of the paper, aimed at a moderately knowledgeable audience. Reanalysts were allowed to ask any number of questions at the end.
 
 The reanalysts received also a physical and a digital version of the original paper and a URL from where to download the data (as distributed originally to the public in \cite{Nacenta:memorability_data}). The data is provided in a comma separated file (with column heading names in the first row). The data includes 
 
