--- a/SummerSchoolPaper/open.tex
+++ b/SummerSchoolPaper/open.tex
@@ -15,7 +15,7 @@ Finally, by ``Executable'', we mean a paper that can be reconstructed from sourc
 materials, and that data can be reanalysed as it changes and new versions of the paper produced, and possibly executable code rerun.  
 This has numerous advantages because as we add data, the paper does not need to be rewritten.\footnote{The name ``reproducible paper'' is sometimes used for this, but can lead to confusion because a paper can be executable in the sense of being able to produce new figures with 
 changed data, but not reproducible if that data can not be reconstructed ab initio.}
-To make our paper executable, we used Sweave, a package that integrates the statistics system R and \LaTeX. 
+To make our paper executable, we used Sweave \cite{lmucs-papers:Leisch:2002}, a package that integrates the statistics system R and \LaTeX. 
 To ease the workflow and to make execution of the paper easy, we wrote a Makefile for the generation of the paper pdf, although there are still some issues which need manual intervention such as installation of the necessary R packages. 
 
 To what extent have we succeeded in making this paper open, reproducible, and executable?  At this stage,
@@ -25,7 +25,7 @@ computations involved in constructing the data must be run by hand.   In terms o
 
 
 
-\textbf{Notes about Sweave (citation needed), about how all tables and fig in paper are from Sweave (true?).  
+\textbf{Notes about Sweave, about how all tables and fig in paper are from Sweave (true?).  
 VM in depot and recomp to allow paper to be rebuilt.
 VMs available where possible}
 
