--- a/SummerSchoolPaper/paper.bib
+++ b/SummerSchoolPaper/paper.bib
@@ -356,4 +356,17 @@ booktitle={Proceedings of the Eleventh European Workshop on Performance Engineer
 }
 
 
+@inproceedings{lmucs-papers:Leisch:2002,
+      author = {Friedrich Leisch},
+        title = {Sweave: Dynamic Generation of Statistical Reports Using
+                      Literate Data Analysis},
+          booktitle = {Compstat 2002 --- Proceedings in Computational
+                      Statistics},
+            pages = {575--580},
+              year = 2002,
+                editor = {Wolfgang H{\"a}rdle and Bernd R{\"o}nz},
+                  publisher = {Physica Verlag, Heidelberg},
+                    note = {ISBN 3-7908-1517-9},
+                      url = {http://www.stat.uni-muenchen.de/~leisch/Sweave}
+}
 
